tests/invalid/Return_Invalid_6.whiley
import * from whiley.lang.*

function f(bool y) -> int:
    return y
